# stat418-tools-in-datascience-2026

./: .gitignore  pyproject.toml
final-project/: README.md  narasayya-rohan.md
final-project/proposal-slides/: README.md
week-2/assignment-1/submissions/rohannarasayya/: README.md  REPORT.md  analyze_logs.sh  download_data.sh  generate_report.sh  run_pipeline.sh
week-4/: README.md
week-4/assignment-2/: README.md
week-4/assignment-2/submissions/rohannarasayya/: README.md  REPORT.md  analyze_data.py  api_collector.py  data_processor.py  requirements.txt  run_pipeline.py  web_scraper.py
week-4/assignment-2/submissions/rohannarasayya/data/analysis/: summary_report.txt
week-5/: PRESENTATION_ORDER_README.md  README.md  Spring_2026-STATS_roster.csv  randomize_presentations.ipynb
week-5/examples/llm-basics/: README.md
week-6/proposal-presentation/: README.md
week-7/assignment-3/submissions/: narasayya-rohan-hw3.md
